changes in cards

--- a/Accommodation.html
+++ b/Accommodation.html
@@ -83,7 +83,7 @@
 
                     <li><a href="index.html">HOME</a></li>
                     <li><a href="schedule.html">SCHEDULE</a></li>
-					<li><a href="speakers.html">COURSE ORGANIZERS</a></li>
+					<li><a href="speakers.html">ORGANIZERS/INSTRUCTORS/INSTRUCTORS</a></li>
 					<li><a href="registration.html">REGISTRATION</a></li>
                     <li><a class="is-active" href="Accommodation.html">ACCOMMODATION</a></li>
                     <li><a href="places.html">PLACES TO VISIT</a></li>
