--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
 
                     <li><a class="is-active" href="index.html">HOME</a></li>
                     <li><a href="schedule.html">SCHEDULE</a></li>
-					<li><a href="speakers.html">COURSE ORGANIZERS</a></li>
+					<li><a href="speakers.html">ORGANIZERS/INSTRUCTORS</a></li>
                     <!-- -->
 					<li><a href="registration.html">REGISTRATION</a></li>
                     <li><a href="Accommodation.html">ACCOMMODATION</a></li>
