internship form modified

--- a/registration.html
+++ b/registration.html
@@ -203,8 +203,10 @@
 						</table>
 							<br>
 				
-				<h2 class="title-style-2">Internship Form at IIT Patna  <span class="title-under"></span></h2>
-			<p>Participants interested for internship at IIT Patna may apply here <br> <a href="https://goo.gl/forms/xaOFbpH9CSRMSCeJ3">https://goo.gl/forms/xaOFbpH9CSRMSCeJ3<a/> </p>
+				<h2 class="title-style-2">Internship Application  <span class="title-under"></span></h2>
+			<p>Anyone interested for internship at IIT Patna may apply here 
+				<br><br>
+				<a href="https://goo.gl/forms/xaOFbpH9CSRMSCeJ3">https://goo.gl/forms/xaOFbpH9CSRMSCeJ3<a/> </p>
 			<br>	
      </div>
 
