--- a/registration.html
+++ b/registration.html
@@ -206,7 +206,7 @@
 				<h2 class="title-style-2">Internship Application  <span class="title-under"></span></h2>
 			<p>Anyone interested for internship at IIT Patna may apply here 
 				<br><br>
-				<a href="https://goo.gl/forms/xaOFbpH9CSRMSCeJ3">https://goo.gl/forms/xaOFbpH9CSRMSCeJ3<a/> </p>
+				<a href="https://goo.gl/forms/xaOFbpH9CSRMSCeJ3"><strong>https://goo.gl/forms/xaOFbpH9CSRMSCeJ3 (click here)</strong><a/> </p>
 			<br>	
      </div>
 
