--- a/index.html
+++ b/index.html
@@ -106,14 +106,14 @@
               <div class="container">
 
                 <!-- <div>
-                    <img style="max-width: 50px" src="./assets/images/CEP11.png">
+                    <img style="max-width: 50px" src="./assets/images/xxx.png">
                 </div> -->
 
                     <div class="carousel-caption">
                             
                     <h2 class="carousel-title bounceInDown animated slow"> UAV Swarms for Internet of Vehicles (IoV) on</h2>
                     <div class="logo">
-                        <img class="img-fluid" style="max-width: 200px;padding: 10px" src="./assets/images/CEP1.png">
+                        <img class="img-fluid" style="max-width: 200px;padding: 10px" src="./assets/images/xxx.png">
                         <img class="img-fluid" style="max-width: 140px;padding: 10px" src="./assets/images/iitp.png">
                     </div>
                     <h2 class="carousel-title zoomIn animated slow">UAV Swarms for  <br> Internet of Vehicles (IoV)<br></h2>
