--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
 
                     <div class="carousel-caption">
                             
-                    <h2 class="carousel-title bounceInDown animated slow"> UAV Swarms for Internet of Vehicles (IoV) on</h2>
+                    <h2 class="carousel-title bounceInDown animated slow"> Workshop on</h2>
                     <div class="logo">
                        <!-- <img class="img-fluid" style="max-width: 200px;padding: 10px" src="./assets/images/xxx.png"> -->
                         <img class="img-fluid" style="max-width: 140px;padding: 10px" src="./assets/images/iitp.png">
