--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
                         Indian Institute of Technology, Patna<br>
                         Bihta, Bihar, India</strong></h3>
 
-                    <h2 style="background-color: rgba(255, 255, 255, .88);padding-bottom: 30px" class="carousel-subtitle bounceInUp animated slow"><br>3 December 2018 - 07 December 2018</h2>
+                    <h2 style="background-color: rgba(255, 255, 255, .88);padding-bottom: 30px" class="carousel-subtitle bounceInUp animated slow"><br>21 December 2022</h2>
         
                     </div> <!-- /.carousel-caption -->
 
