--- a/index.html
+++ b/index.html
@@ -213,8 +213,8 @@
 				Currently an extensive number of possible research, challenges are there in 
 				the development of the UAV-enabled internet of vehicles. As a result, the workshop's 
 				theme is to invite various national and international academia, research professionals, 
-				Industry, and government entities to present their quality research work. The topics of 
-				interest include, but are not limited to: 
+				Industry, and government entities to present their quality research work. 
+				<br><p>The topics of interest include, but are not limited to: </p></br>
 				
 				<p>1.Wireless Technologies for Internet of Vehicles applications</p>
 				<p>2.UAV-assisted Internet of Vehicles for Healthcare applications </p> 
