--- a/index.html
+++ b/index.html
@@ -234,7 +234,7 @@
                         
                     </div>
                     <div class="col-md-6 order-first">
-                            <img style="padding-top: 80px" src="assets/images/iov.png" alt="" class="img-responsive">
+                            <img style="padding-top: 80px" src="assets/images/iov1.png" alt="" class="img-responsive">
                         </div>
                     
 
