--- a/index.html
+++ b/index.html
@@ -235,6 +235,7 @@
                     </div>
                     <div class="col-md-6 order-first">
                             <img style="padding-top: 80px" src="assets/images/iov1.png" alt="" class="img-responsive">
+			     <img style="padding-top: 80px" src="assets/images/iov1.png" alt="" class="img-responsive">
                         </div>
                     
 
