--- a/schedule.html
+++ b/schedule.html
@@ -118,9 +118,9 @@
 			
              <a href="data/xxx.pdf" target="_blank">Download Schedule (Click Here) <img src="data/pdf-icon.ico" height="50px;" width="50px;"></a><hr>
             <a href="data/xxx.pdf" target="_blank">Download Brochure (Click Here) <img src="data/pdf-icon.ico" height="50px;" width="50px;"></a><hr>
-		<div style="font-size: 24px" align="center"><strong>(Venue: NKN, Room 407, Tutorial Block, IIT Patna)</strong><br><br>
+		<div style="font-size: 24px" align="center"><strong>(Venue: IIT Patna)</strong><br><br>
 	    </div>
-		<a href="data/xxx.pdf" target="_blank"><img src="assets/images/schedule.jpg" class="schedulee"></a>
+		<a href="data/xxx.pdf" target="_blank"><img src="assets/images/schedule1.jpg" class="schedulee"></a>
 		<br>
 
 		<br>
