--- a/schedule.html
+++ b/schedule.html
@@ -120,7 +120,7 @@
             <a href="data/xxx.pdf" target="_blank">Download Brochure (Click Here) <img src="data/pdf-icon.ico" height="50px;" width="50px;"></a><hr>
 		<div style="font-size: 24px" align="center"><strong>(Venue: IIT Patna)</strong><br><br>
 	    </div>
-		<a href="data/xxx.pdf" target="_blank"><img src="assets/images/schedule1.jpg" class="schedulee"></a>
+		<center><a href="data/xxx.pdf" target="_blank"><img src="assets/images/schedule1.jpg" class="schedulee"></a></center>
 		<br>
 
 		<br>
