--- a/schedule.html
+++ b/schedule.html
@@ -77,7 +77,7 @@
 
                     <li><a href="index.html">HOME</a></li>
                     <li><a class="is-active" href="schedule.html">SCHEDULE</a></li>
-					<li><a href="speakers.html">ORGANIZERS/INSTRUCTORS</a></li>
+					<li><a href="speakers.html">WORKSHOP ORGANIZERS</a></li>
 					<li><a href="registration.html">REGISTRATION</a></li>
                     <li><a href="Accommodation.html">ACCOMMODATION</a></li>
                     <li><a href="places.html">PLACES TO VISIT</a></li>
