--- a/speakers.html
+++ b/speakers.html
@@ -320,7 +320,7 @@
                     <br><br><br><br>
 				<h2 class="title-style-2">Prof. Rajiv Misra, IIT Patna, India. <span class="title-under"></span></h2>
 
-				<p align="justify">
+				<p align="center">
 
                             Dr. Rajiv Misra is a professor at the Indian Institute of Technology Patna's Department 
                             of Computer Science and Engineering. Dr. Misra earned his Ph.D., M.Tech., and B.Tech. 
