--- a/schedule.html
+++ b/schedule.html
@@ -208,11 +208,11 @@
     
                                 <div class="footer-content">
                                           <p align="left">
-                                            <a href="https://goo.gl/forms/583LVSCeWwhmMOuN2" target="_blank">
+                                           <!-- <a href="https://goo.gl/forms/583LVSCeWwhmMOuN2" target="_blank">
                                             Registration Form (Click Here)
                                             </a> <br><br>
                                             Last date of submission of registration Fee & Form : <br><strong>NOV 5, 2022</strong> <a href="registration.html"> [more detail...]</a>
-                                           </p>
+                                           </p> -->
                                 </div>
                                 
                             </div>
