--- a/schedule.html
+++ b/schedule.html
@@ -41,7 +41,7 @@
                             <div class="col-sm-6 col-xs-12 text-right">
         
                                <ul class="list-unstyled list-inline header-contact">
-                               <li> <i class=""></i> <a href="https://www.iitp.ac.in/index.php/departments/engineering/computer-science-a-engineering/about-the-department.html" target="_blank">CSE</a> </li>
+                               <li> <i class=""></i> <a href="https://www.iitp.ac.in/index.php/departments/engineering-technology/computer-science-and-engineering" target="_blank">CSE</a> </li>
                                <li>|</li>
                                <li> <i class=""></i> <a href="https://www.iitp.ac.in/" target="_blank">IIT Patna</a> </li>
                                </ul> <!-- /.header-contact  -->
