--- a/speakers.html
+++ b/speakers.html
@@ -318,7 +318,7 @@
 
 				<div class="col-md-6">
                     <br><br><br><br>-->
-				<h2 class="title-style-2">Prof. Rajiv Misra, IIT Patna, India. <span class="title-under"></span></h2>
+				<center><b><h2 class="title-style-2">Prof. Rajiv Misra, IIT Patna, India. <span class="title-under"></span></h2></b></center>
 				<p align="justify">
 
                             Dr. Rajiv Misra is a professor at the Indian Institute of Technology Patna's Department 
