--- a/speakers.html
+++ b/speakers.html
@@ -459,12 +459,12 @@
                                 <h4 class="footer-title">REGISTRATION INFO <span class="title-under"></span></h4>
     
                                 <div class="footer-content">
-                                          <p align="left">
+                                          <!--<p align="left">
                                             <a href="https://goo.gl/forms/583LVSCeWwhmMOuN2" target="_blank">
                                             Registration Form (Click Here)
                                             </a> <br><br>
                                             Last date of submission of registration Fee & Form : <br><strong>NOV 5, 2022</strong> <a href="registration.html"> [more detail...]</a>
-                                           </p>
+                                           </p> -->
                                 </div>
                                 
                             </div>
