--- a/places.html
+++ b/places.html
@@ -2,7 +2,7 @@
 <html class="no-js">
     <head>
         <meta charset="utf-8">
-        <title>Short Term Course CEP/FDP</title>
+        <title>UAV Swarms for Internet of Vehicles (IoV)</title>
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <!-- Fonts -->
@@ -43,7 +43,7 @@
                             <div class="col-sm-6 col-xs-12 text-right">
         
                                <ul class="list-unstyled list-inline header-contact">
-                               <li> <i class=""></i> <a href="https://www.iitp.ac.in/index.php/departments/engineering/computer-science-a-engineering/about-the-department.html" target="_blank">CSE</a> </li>
+                               <li> <i class=""></i> <a href="https://www.iitp.ac.in/index.php/departments/engineering-technology/computer-science-and-engineering" target="_blank">CSE</a> </li>
                                <li>|</li>
                                <li> <i class=""></i> <a href="https://www.iitp.ac.in/" target="_blank">IIT Patna</a> </li>
                                </ul> <!-- /.header-contact  -->
