--- a/contact.html
+++ b/contact.html
@@ -79,7 +79,7 @@
 
                     <li><a href="index.html">HOME</a></li>
                     <li><a href="schedule.html">SCHEDULE</a></li>
-					<li><a href="speakers.html">ORGANIZERS/INSTRUCTORS</a></li>
+					<li><a href="speakers.html">WORKSHOP ORGANIZERS</a></li>
 					<li><a href="registration.html">REGISTRATION</a></li>
                     <li><a href="Accommodation.html">ACCOMMODATION</a></li>
                     <li><a href="places.html">PLACES TO VISIT</a></li>
@@ -166,7 +166,7 @@
                         </ul>
                         <br>
                         <p>
-                           <!-- <strong>Regarding Accommodation : </strong>
+                           <strong>Regarding Accommodation : </strong>
                         </p>
                         <hr>
 						<ul class="list-unstyled contact-items-list">
@@ -213,7 +213,7 @@
                         If you have any query, please fill this form and we'll contact you ASAP.
                         <br><br>
                         <a href="https://goo.gl/forms/nON3HulLif6dD7kv1"><strong>https://goo.gl/forms/nON3HulLif6dD7kv1</strong> </a>
-                    </p> -->
+                    </p> 
                     <br>
                     <h2 class="title-style-2"> How To Reach ? <span class="title-under"></span></h2>
                     <br>
